agregue disparo enemigo

--- a/bin/logica/visitor/.gitignore
+++ b/bin/logica/visitor/.gitignore
@@ -5,3 +5,5 @@
 /VisitorProyectilEnemigo.class
 /VisitorProyectilJugador.class
 /VisitorNaveEnemiga.class
+/VisitorRemover.class
+/VisitorDisparo.class
